Footer alignment fixed

--- a/src/pages/landing/footer/footer.css
+++ b/src/pages/landing/footer/footer.css
@@ -1,6 +1,5 @@
 .LandingFooter {
     display: flex;
-    display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: flex-start;
@@ -19,6 +18,12 @@
     font-size: 21px;
     vertical-align: middle;
     line-height: 21px;
+}
+
+@media (min-width: 769px) {
+    .LandingFooterLogo {
+        margin-left: -10vw;
+    }
 }
 
 .LandingFooterHeadline {
